--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,6 +7,12 @@ jobs:
       image: ubuntu-1604:201903-01 # # recommended linux image - includes Ubuntu 16.04, docker 18.09.3, docker-compose 1.23.1
 
       steps:
+        - run:
+          name: "Make it executable"
+          command: |
+            chmod +x build_vyos.sh
         # Commands run in a Linux virtual machine environment
-        - run: chmod +x build_vyos.sh
-        - run: ./build_vyos.sh unibaktr https://downloads.vyos.io/?dir=release/legacy/1.1.8
+        - run:
+          name: "Build Docker image"
+          command: |
+            ./build_vyos.sh unibaktr https://downloads.vyos.io/?dir=release/legacy/1.1.8
